# socksify5

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements_dev.txt  run_server.py
socksify5/: __init__.py  auth.py  events.py  server.py
tests/: __init__.py  test_server.py
