[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socksify5"
version = "0.1.0"
description = "A Python library for creating SOCKS5 proxy servers"
authors = [
    {name = "Egor Serdiuk", email = "egor.serduck@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: Proxy Servers",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/egorserdyuk/socksify5"
Repository = "https://github.com/egorserdyuk/socksify5"

[tool.setuptools.packages.find]
where = ["."]